1. Add Velocity autoconfiguration.